--- a/force-app/main/default/classes/onboardingTileController.cls
+++ b/force-app/main/default/classes/onboardingTileController.cls
@@ -42,6 +42,50 @@ public without sharing class onboardingTileController {
         return dwrap;
     }
     
+    @AuraEnabled(cacheable=true)
+    public static dataWrapper getoffboardingTasks(){
+        List<Task> taskList = new List<Task>();
+      
+        taskList = [SELECT Id,Subject,ActivityDate,Who.Name,Offboarding_UniqueKey__c,Status,Requires_Navigation__c,Navigation_address__c
+                         FROM Task WHERE Offboarding_UniqueKey__c != null AND OwnerId=:Userinfo.getUserId() ];
+        
+        List<taskInfoWrap> taskInfoWrapper = new List<taskInfoWrap>();
+        List<dataWrapper> dataWrapper = new List<dataWrapper>();
+        Integer numberTasks = taskList.size();
+        Integer NumberofCompletedTasks = 0;
+        
+        List<Network> network = [select name, UrlPathPrefix FROM Network where name like '%grid' limit 1];
+           String base = URL.getSalesforceBaseUrl().toExternalForm(); 
+        for(Task tnew : taskList){
+            taskInfoWrap tw = new taskInfoWrap();
+            tw.taskid = tnew.Id;
+            tw.subject = tnew.Who.Name+'-'+tnew.Subject;
+            tw.taskurl = '/task/:'+tnew.Id;
+            Date duedate = tnew.ActivityDate;
+            tw.substring = 'Due by '+duedate.day() + '/' + duedate.month() + '/' + duedate.year();
+            tw.isCompleted = false;
+            if(tnew.Status == 'Completed'){
+               NumberofCompletedTasks = NumberofCompletedTasks+1;
+               tw.isCompleted = true;
+            }
+            if(tnew.Requires_Navigation__c){
+                tw.reqNav = tnew.Requires_Navigation__c;
+                if(!Test.isRunningTest()){
+                 tw.navLink = base + '/' + network[0].UrlPathPrefix + '/s/'+tnew.Navigation_address__c;
+                }else{
+                  tw.navLink = tnew.Navigation_address__c;  
+                }
+            }
+            taskInfoWrapper.add(tw);
+        }
+        dataWrapper dwrap = new dataWrapper();
+        dwrap.numberofTasks=numberTasks;
+        dwrap.numberofcompletedTasks=NumberofCompletedTasks;
+        dwrap.taskList = taskInfoWrapper;
+        
+        return dwrap;
+    }
+    
     @AuraEnabled
     public static string updateTheTaskasComplete(Id taskid){
         try{
