--- a/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
+++ b/force-app/main/default/classes/CP_SendOnboardingFormMail.cls
@@ -13,7 +13,7 @@
 * N/A           N/A                     N/A
 * ====================================================================================================
 **/
-public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert, TriggerAction.AfterUpdate{
+public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert{
     /**
     * @author Eswar
     * @date 02/02/2023
@@ -43,28 +43,10 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert, Tri
 * N/A           N/A                     N/A
 * ====================================================================================================
 **/
-    public void afterUpdate(List<Contact> newList, List<Contact> oldList) {      
-        System.debug(LoggingLevel.DEBUG, 'CP_SendOnboardingFormMail.afterUpdate() : BEGIN');
-        sendOnboardingFormMailAfterUpdate(newList,new Map<Id,Contact>(oldList));
-        System.debug(LoggingLevel.DEBUG, 'CP_SendOnboardingFormMail.afterUpdate() : END');       
-    }
-    
-    /**
-    * @author Eswar
-    * @date 02/02/2023
-    * @description After Update
-    *
-    * CHANGE HISTORY
-    * ====================================================================================================
-    * DATE          NAME                    DESCRIPTION
-    * N/A           N/A                     N/A
-    * ====================================================================================================
-    **/
     
     private void sendOnboardingFormMail(List<Contact> contactList){
         
         List<EMS_EM_Onboarding_Request__c> applicantsList = new List<EMS_EM_Onboarding_Request__c>();
-        List<ems_EM_Additional_Detail__c> additionalDetailsList = new List<ems_EM_Additional_Detail__c>();
         List<Contact> applicantsToSendMail = new List<Contact>();
         Group itGroup = [select Id,Name from Group where  Type = 'Queue' AND NAME = 'TA Team'];
         Id contRecordTypeId = [Select id from RecordType where sObjectType = 'Contact' and developerName ='Applicant' ].id ;
@@ -89,11 +71,6 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert, Tri
                 applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
                 applicantRec.Status__c = 'Triggered';
                 applicantsList.add(applicantRec);
-                   
-                /*ems_EM_Additional_Detail__c additionalDetailsRec = new ems_EM_Additional_Detail__c();
-                additionalDetailsRec.Onboarding_Request__c = applicantRec.id;
-                additionalDetailsRec.ContactId__c = applicantRec.ContactId1__c;
-                additionalDetailsList.add(additionalDetailsRec);*/
                 
                 Messaging.SingleEmailMessage message = sendEmailToHR(contactRec.Id);
                 hrMailList.add(message);
@@ -109,71 +86,14 @@ public class CP_SendOnboardingFormMail implements TriggerAction.AfterInsert, Tri
             insert applicantsList;
         }
         
-        if(additionalDetailsList.size() > 0){
-            insert additionalDetailsList;
-        }
-        
-        Messaging.sendEmail(hrMailList);
-        Messaging.sendEmail(adminMailList);
-        Messaging.sendEmail(itMailList);
-    }
-    
-    private void sendOnboardingFormMailAfterUpdate(List<Contact> contactList, Map<Id,Contact> oldMap){
-        
-        List<EMS_EM_Onboarding_Request__c> applicantsList = new List<EMS_EM_Onboarding_Request__c>();
         List<ems_EM_Additional_Detail__c> additionalDetailsList = new List<ems_EM_Additional_Detail__c>();
-        List<Contact> applicantsToSendMail = new List<Contact>();
-        Group itGroup = [select Id,Name from Group where  Type = 'Queue' AND NAME = 'TA Team'];
-        Id contRecordTypeId = [Select id from RecordType where sObjectType = 'Contact' and developerName ='Applicant' ].id ;
-        List<Messaging.SingleEmailMessage> hrMailList = new List<Messaging.SingleEmailMessage>();
-        List<Messaging.SingleEmailMessage> adminMailList = new List<Messaging.SingleEmailMessage>();
-        List<Messaging.SingleEmailMessage> itMailList = new List<Messaging.SingleEmailMessage>();
-        
-        for(Contact contactRec : contactList){
-            
-            Date today = Date.today();
-            Date sobjectDate = contactRec.EMS_EM_JD__c;
-            
-            if(contactRec.RecordTypeId == contRecordTypeId && contactRec.EMS_EM_JD__c != NULL && 
-               (oldMap.get(contactRec.Id).EMS_EM_JD__c == NULL && contactRec.EMS_EM_JD__c != NULL)){
-                   
-                EMS_EM_Onboarding_Request__c applicantRec = new EMS_EM_Onboarding_Request__c();
-                applicantRec.EMS_EM_Personal_Email__c = contactRec.Personal_Email__c;
-                applicantRec.ContactId1__c = contactRec.Id;
-                applicantRec.EMS_EM_First_Name__c = contactRec.FirstName;
-                applicantRec.EMS_EM_Last_Name__c = contactRec.LastName;
-                applicantRec.Phone_Number__c = contactRec.EMS_Phone_Number__c;
-                applicantRec.Date_of_Joining__c = contactRec.EMS_EM_JD__c;
-                applicantRec.Status__c = 'Triggered';
-                applicantsList.add(applicantRec);
-                   
-                /*ems_EM_Additional_Detail__c additionalDetailsRec = new ems_EM_Additional_Detail__c();
-                additionalDetailsRec.Onboarding_Request__c = applicantRec.id;
-                additionalDetailsRec.ContactId__c = applicantRec.ContactId1__c;
-                additionalDetailsList.add(additionalDetailsRec);*/
-                   
-            }
-            
-            if(applicantsList.size() > 0){
-                insert applicantsList;
-            }
-            
-            if(additionalDetailsList.size() > 0){
-                insert additionalDetailsList;
-            }
-            
-            if(contactRec.RecordTypeId == contRecordTypeId && contactRec.EMS_EM_JD__c != NULL && today.daysBetween(sobjectDate) < 10 && 
-               contactRec.EMS_EM_JD__c >= system.today() && (oldMap.get(contactRec.Id).EMS_EM_JD__c == NULL && contactRec.EMS_EM_JD__c != NULL)){
-                  
-                Messaging.SingleEmailMessage message = sendEmailToHR(contactRec.Id);
-                hrMailList.add(message);
-                Messaging.SingleEmailMessage message1 = sendEmailToAdminTeam(contactRec.Id);
-                adminMailList.add(message1);
-                Messaging.SingleEmailMessage message2 = sendEmailToITTeamForNewJoin(contactRec.Id);
-                itMailList.add(message2);
-                  
-            }   
+        for(EMS_EM_Onboarding_Request__c onboardingRecords : applicantsList){
+            ems_EM_Additional_Detail__c applicantRec = new ems_EM_Additional_Detail__c();
+            applicantRec.Onboarding_Request__c = onboardingRecords.id;
+            applicantRec.ContactId__c = onboardingRecords.ContactId1__c;
+            additionalDetailsList.add(applicantRec);
         }
+        insert additionalDetailsList;
         
         Messaging.sendEmail(hrMailList);
         Messaging.sendEmail(adminMailList);
