--- a/force-app/main/default/classes/Cp_CalculateLeaveDuration.cls
+++ b/force-app/main/default/classes/Cp_CalculateLeaveDuration.cls
@@ -30,8 +30,9 @@ public without sharing class Cp_CalculateLeaveDuration implements TriggerAction.
     Date startDate = leaveHistoryList[0].EMS_LM_Leave_Start_Date__c;
 	Date endDate = leaveHistoryList[0].EMS_LM_Leave_End_Date__c;
     String daycheck = leaveHistoryList[0].EMS_LM_Day__c;
-    
+    String leaveTypeName = leaveHistoryList[0].Leave_Type_Name__c;  
     String ContactId =leaveHistoryList[0].EMS_LM_Contact__c;
+       
     Id locationId = [SELECT Id, Work_Location__c FROM Contact Where Id =: ContactId].Work_Location__c;
         Set<Date> holidaysSet = new Set<Date>();
         
@@ -49,12 +50,15 @@ public without sharing class Cp_CalculateLeaveDuration implements TriggerAction.
             Date dt = startDate + i;  
             DateTime currDate = DateTime.newInstance(dt.year(), dt.month(), dt.day());  
             String todayDay = currDate.format('EEEE');  
-            if(todayDay != 'Saturday' && todayDay !='Sunday' && daycheck =='Full Day' && (!holidaysSet.contains(dt)))  
+            if(todayDay != 'Saturday' && todayDay !='Sunday' && daycheck =='Full Day' && (!holidaysSet.contains(dt)) && leaveTypeName!=LeaveRequestConstant.LOSS_OF_PAY)  
                 {  
                   //  Duration = Duration + 1;  
                     Duration += 1;
                     system.debug(Duration);
                }
+            if(leaveTypeName == LeaveRequestConstant.LOSS_OF_PAY && daycheck =='Full Day'){
+                Duration += 1;
+            }
             if(daycheck !='Full Day'){
                 Duration = 0.5 - Duration;
             }
